# UnRowdy

./: .gitignore  AGENTS.md  FRONTEND_TEMPLATE_CHECKLIST.md  FRONT_CHECKLIST.md  README.md  docker-compose.yml  ruff.toml
backend/: .dockerignore  .gitignore  Dockerfile  db.py  env.py  main.py  pyproject.toml  requirements.txt  ruff.toml
backend/core/: __init__.py  auth.py  deps.py  errors_util.py  login_manager.py  models.py  schemas.py  user_manager.py
backend/core/errors/: __init__.py  http.py  utils.py
backend/models/: __init__.py  token.py  user.py  utils.py  wish.py
backend/routers/: __init__.py  auth.py  service_categories.py  services.py  users.py  wishes.py
backend/schemas/: __init__.py  user.py  wish.py
backend/utils/: __init__.py  errors.py  login_manager.py  schemas.py
frontend/: .dockerignore  .gitignore  .prettierignore  .prettierrc  Dockerfile  env.py  eslint.config.js  index.html  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json  vite.config.ts
frontend/by_api/: __init__.py  client.py  funcs.py
frontend/controls/: __init__.py  index.py  me.py
frontend/core/api/: __init__.py  client.py  funcs.py
frontend/core/by_api/: client.py
frontend/services/: by_api.py
frontend/services/api/: __init__.py  client.py  funcs.py
frontend/src/: App.tsx  index.css
frontend/src/app/: App.tsx  main.tsx  styles.css
frontend/src/app/layouts/: mainLayout.tsx
frontend/src/app/providers/: ReactQueryProvider.tsx
frontend/src/app/router/: AppRouter.ts  AppRouter.tsx  ProtectedRoute.tsx  PublicOnlyRoute.tsx  auth-loaders.ts  loaders.ts  routes.ts
frontend/src/features/themeToggle/: ThemeToggleButton.tsx
frontend/src/pages/Home/: Home.tsx  HomePage.tsx  SearchSection.tsx
frontend/src/pages/add/: AddPage.tsx
frontend/src/pages/addService/: AddServicePage.tsx
frontend/src/pages/auth/: Auth.tsx  AuthPage.tsx  index.tsx
frontend/src/pages/catalogue/: CataloguePage.tsx
frontend/src/pages/categories/: CategoriesPage.tsx
frontend/src/pages/category/: CategoryPage.tsx
frontend/src/pages/home/: HomePage.tsx  SearchSection.tsx
frontend/src/pages/my/: MyCardSection.tsx  MyFriendsSection.tsx  MyPage.tsx  MyProfilePage.tsx  MyServicesSection.tsx
frontend/src/pages/myProfile/: MyProfilePage.tsx  MyServicesSection.tsx
frontend/src/pages/profile/: ContentSection.tsx  FriendSection.tsx  FriendsSection.tsx  Profile.tsx  ProfilePage.tsx  ServicesSection.tsx  UserCardSection.tsx
frontend/src/pages/service/: ServicePage.tsx
frontend/src/pages/services/: ServicesPage.tsx
frontend/src/pages/test/: test.tsx
frontend/src/shared/api/: auth.ts  axios.ts  categories.ts  friends.ts  service.ts  serviceApi.ts  user.ts
frontend/src/shared/components/: BackPageButton.tsx  ConfirmDialog.tsx  Field.tsx  ImageInput.tsx  NavButton.tsx  NotFoundUser.tsx  Notification.tsx  ShareButton.tsx  Spinner.tsx  ViewProfileButton.tsx
frontend/src/shared/const/: footerData.ts  headerData.ts  routes.ts
frontend/src/shared/hooks/: useNotification.ts
frontend/src/shared/lib/: getDataByUsername.ts  useGetUserData.ts
frontend/src/shared/types/: categoriesType.ts  categoryType.ts  errorResponseType.ts  filterServiceType.ts  profileType.ts  serviceType.ts  serviceTypes.ts  userType.ts
frontend/src/shared/ui/: Categories.Skeleton.tsx  Services.Skeleton.tsx  Skeleton.tsx  Spinner.tsx  Subcategories.Skeleton.tsx
frontend/widgets/: __init__.py  forms.py  objects.py  utils.py  wish.py
tma/: index.html  package.json  (+4 more)
(+279 files in other folders)
