[project]
name = "UnRowdy-backend"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "rowdyslav", email = "rowdyslav@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "environs==14.2.0",
    "fastapi[standard]==0.116.1",
    "fastapi-login==1.10.3",
    "icecream==2.1.3",
    "passlib==1.7.4",
    "pydantic==2.11.7",
    "tortoise-orm[asyncpg]==0.25.1",
    "aerich>=0.9.1",
    "argon2-cffi>=25.1.0",
]

[dependency-groups]
dev = ["ruff>=0.12.4"]

[tool.pyright]
typeCheckingMode = "off"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.aerich]
tortoise_orm = "db.ORM_CONFIG"
location = "./migrations"
src_folder = "./."
