[project]
name = "UnRowdy-backend"
version = "1.0"
authors = [{ name = "rowdyslav", email = "rowdyslav@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]",
    "pydantic",
    "tortoise-orm[asyncpg]",
    "aerich",
    "fastapi-login",
    "environs",
    "passlib",
    "argon2-cffi",
    "icecream",
]

[dependency-groups]
dev = ["ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pyright]
ignore = ["*"]

[tool.aerich]
tortoise_orm = "db.ORM_CONFIG"
location = "./migrations"
src_folder = "./."
