[project]
name = "UnRowdy-backend"
version = "1.0"
authors = [{ name = "rowdyslav", email = "rowdyslav@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]",
    "pydantic",
    "beanie",
    "environs",
    "icecream",
    "fastapi-users[beanie]",
]

[dependency-groups]
dev = ["ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pyright]
ignore = ["*"]
