[project]
name = "UnRowdy-frontend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "rowdyslav", email = "rowdyslav@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiohttp==3.11.10",
    "environs==14.2.0",
    "flet[all]==0.28.3",
    "fastapi-cli"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.pyright]
typeCheckingMode = "off"

[tool.hatch.build.targets.wheel]
packages = ["frontend"]

[dependency-groups]
dev = [
    "ruff>=0.12.4",
]
