[project]
name = "UnRowdy-frontend"
version = "1.0"
authors = [{ name = "rowdyslav", email = "rowdyslav@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["flet[all]", "fastapi-cli", "aiohttp", "environs", "icecream"]

[dependency-groups]
dev = ["ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["frontend"]

[tool.pyright]
ignore = ["*"]
